CHATS_SIT/force-app/main/default/objects/sfsit_t_sbsd_case_adr_hist__x.object
<CustomObject>
    <description>sfsit$t_sbsd_case_adr_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_sbsd_case_adr_hist</externalName>
    <fields>
        <fullName>adr_city__c</fullName>
        <description>adr_city</description>
        <externalDeveloperName>adr_city</externalDeveloperName>
        <label>City</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_latd__c</fullName>
        <description>adr_latd</description>
        <externalDeveloperName>adr_latd</externalDeveloperName>
        <label>Address latitude</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_line_1__c</fullName>
        <description>adr_line_1</description>
        <externalDeveloperName>adr_line_1</externalDeveloperName>
        <label>Address Line 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_line_2__c</fullName>
        <description>adr_line_2</description>
        <externalDeveloperName>adr_line_2</externalDeveloperName>
        <label>Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_line_3__c</fullName>
        <description>adr_line_3</description>
        <externalDeveloperName>adr_line_3</externalDeveloperName>
        <label>Address Line3</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_lngtd__c</fullName>
        <description>adr_lngtd</description>
        <externalDeveloperName>adr_lngtd</externalDeveloperName>
        <label>Address longitude</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_state__c</fullName>
        <description>adr_state</description>
        <externalDeveloperName>adr_state</externalDeveloperName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_zip_extn__c</fullName>
        <description>adr_zip_extn</description>
        <externalDeveloperName>adr_zip_extn</externalDeveloperName>
        <label>Zip Ext.</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_zip_main__c</fullName>
        <description>adr_zip_main</description>
        <externalDeveloperName>adr_zip_main</externalDeveloperName>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_vrfd_adr__c</fullName>
        <description>cde_source_vrfd_adr</description>
        <externalDeveloperName>cde_source_vrfd_adr</externalDeveloperName>
        <label>How Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_adr__c</fullName>
        <description>cde_type_adr</description>
        <externalDeveloperName>cde_type_adr</externalDeveloperName>
        <label>Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_verif__c</fullName>
        <description>cde_type_verif</description>
        <externalDeveloperName>cde_type_verif</externalDeveloperName>
        <label>Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_verif__c</fullName>
        <description>dte_verif</description>
        <externalDeveloperName>dte_verif</externalDeveloperName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_adr__c</fullName>
        <description>idn_sbsd_case_adr</description>
        <externalDeveloperName>idn_sbsd_case_adr</externalDeveloperName>
        <label>Case Address ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_CASE_ADR__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE_ADR__c</referenceTo>
        <relationshipLabel>Case Address Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_sbsd_case_adr_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_adr_hist__c</fullName>
        <description>idn_sbsd_case_adr_hist</description>
        <externalDeveloperName>idn_sbsd_case_adr_hist</externalDeveloperName>
        <label>Case Address ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_sbsd_case_adr_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_user_vrfyng__c</fullName>
        <description>idn_user_vrfyng</description>
        <externalDeveloperName>idn_user_vrfyng</externalDeveloperName>
        <label>User verification ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>current Record Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_adr__c</fullName>
        <description>nbr_seq_adr</description>
        <externalDeveloperName>nbr_seq_adr</externalDeveloperName>
        <label>Number Sequence address</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Address History</label>
    <pluralLabel>Case Address History</pluralLabel>
</CustomObject>